--- a/stylepresent.css
+++ b/stylepresent.css
@@ -113,6 +113,7 @@ button {
     border-radius: 5px; /* Coins arrondis uniformes */
     cursor: pointer;
     transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+    white-space: nowrap;
 }
 
 /* Effet au survol */
